tests/snapshots/cmd_generate_imports__import_chain.snap
---
source: tests/cmd_generate_imports.rs
expression: p.generate_snapshot(&output)
---
exit_code: 0
---stderr---
    Checking workflow definitions
  Evaluating workflow definitions
       Wrote .github/workflows/generated_ci.yaml
    Finished generated 1 workflow in [TIME]
--- .github/ghat/workflows/_constants.ts ---
export const RUNNER = "ubuntu-latest"
export const MAIN_BRANCH = "main"
--- .github/ghat/workflows/_helpers.ts ---
import { RUNNER } from "./_constants.ts"

export function buildJob(ctx: any) {
  ctx.job("Build", {
    runs_on: RUNNER,
    steps() { run("cargo build") }
  })
}
--- .github/ghat/workflows/ci.ts ---
import { MAIN_BRANCH } from "./_constants.ts"
import { buildJob } from "./_helpers.ts"

workflow("CI", {
  on: triggers({ push: [MAIN_BRANCH] }),
  jobs(ctx) {
    buildJob(ctx)
  }
})
--- .github/workflows/generated_ci.yaml ---
# Do not edit: this file is generated by `ghat generate`.
name: CI
on:
  push:
    branches:
    - main
jobs:
  build:
    name: Build
    runs-on: ubuntu-latest
    steps:
    - id: step_0
      run: cargo build
