tests/snapshots/cmd_generate_imports__import_shared_job_factory.snap
---
source: tests/cmd_generate_imports.rs
expression: p.generate_snapshot(&output)
---
exit_code: 0
---stderr---
    Checking workflow definitions
  Evaluating workflow definitions
       Wrote .github/workflows/generated_ci.yaml
    Finished generated 1 workflow in [TIME]
--- .github/ghat/workflows/_jobs.ts ---
export function addCIJobs(ctx: any) {
  ctx.job("Lint", {
    runs_on: "ubuntu-latest",
    steps() { run("cargo clippy") }
  })
  ctx.job("Format", {
    runs_on: "ubuntu-latest",
    steps() { run("cargo fmt --check") }
  })
}
--- .github/ghat/workflows/ci.ts ---
import { addCIJobs } from "./_jobs.ts"

workflow("CI", {
  on: triggers({ push: ["main"] }),
  jobs(ctx) {
    addCIJobs(ctx)
  }
})
--- .github/workflows/generated_ci.yaml ---
# Do not edit: this file is generated by `ghat generate`.
name: CI
on:
  push:
    branches:
    - main
jobs:
  lint:
    name: Lint
    runs-on: ubuntu-latest
    steps:
    - id: step_0
      run: cargo clippy
  format:
    name: Format
    runs-on: ubuntu-latest
    steps:
    - id: step_0
      run: cargo fmt --check
