tests/snapshots/cmd_generate_imports__import_shared_triggers.snap
---
source: tests/cmd_generate_imports.rs
expression: p.generate_snapshot(&output)
---
exit_code: 0
---stderr---
    Checking workflow definitions
  Evaluating workflow definitions
       Wrote .github/workflows/generated_build.yaml
       Wrote .github/workflows/generated_test.yaml
    Finished generated 2 workflows in [TIME]
--- .github/ghat/workflows/_triggers.ts ---
export const ci_triggers = triggers({
  push: ["main"],
  pull_request: { branches: ["main"] },
})
--- .github/ghat/workflows/build.ts ---
import { ci_triggers } from "./_triggers.ts"

workflow("Build", {
  on: ci_triggers,
  jobs(ctx) {
    ctx.job("Build", {
      runs_on: "ubuntu-latest",
      steps() { run("cargo build") }
    })
  }
})
--- .github/ghat/workflows/test.ts ---
import { ci_triggers } from "./_triggers.ts"

workflow("Test", {
  on: ci_triggers,
  jobs(ctx) {
    ctx.job("Test", {
      runs_on: "ubuntu-latest",
      steps() { run("cargo test") }
    })
  }
})
--- .github/workflows/generated_build.yaml ---
# Do not edit: this file is generated by `ghat generate`.
name: Build
on:
  push:
    branches:
    - main
  pull_request:
    branches:
    - main
jobs:
  build:
    name: Build
    runs-on: ubuntu-latest
    steps:
    - id: step_0
      run: cargo build
--- .github/workflows/generated_test.yaml ---
# Do not edit: this file is generated by `ghat generate`.
name: Test
on:
  push:
    branches:
    - main
  pull_request:
    branches:
    - main
jobs:
  test:
    name: Test
    runs-on: ubuntu-latest
    steps:
    - id: step_0
      run: cargo test
