tests/snapshots/cmd_generate_imports__import_without_extension.snap
---
source: tests/cmd_generate_imports.rs
expression: p.generate_snapshot(&output)
---
exit_code: 0
---stderr---
    Checking workflow definitions
  Evaluating workflow definitions
       Wrote .github/workflows/generated_ci.yaml
    Finished generated 1 workflow in [TIME]
--- .github/ghat/workflows/_helpers.ts ---
export const RUNNER = "ubuntu-latest"
--- .github/ghat/workflows/ci.ts ---
import { RUNNER } from "./_helpers"

workflow("CI", {
  on: triggers({ push: ["main"] }),
  jobs(ctx) {
    ctx.job("Build", {
      runs_on: RUNNER,
      steps() { run("cargo build") }
    })
  }
})
--- .github/workflows/generated_ci.yaml ---
# Do not edit: this file is generated by `ghat generate`.
name: CI
on:
  push:
    branches:
    - main
jobs:
  build:
    name: Build
    runs-on: ubuntu-latest
    steps:
    - id: step_0
      run: cargo build
