tests/snapshots/cmd_generate_imports__reusable_workflow_imported_by_two_files.snap
---
source: tests/cmd_generate_imports.rs
expression: p.generate_snapshot(&output)
---
exit_code: 0
---stderr---
    Checking workflow definitions
  Evaluating workflow definitions
       Wrote .github/workflows/generated_shared_build.yaml
       Wrote .github/workflows/generated_ci.yaml
       Wrote .github/workflows/generated_release.yaml
    Finished generated 3 workflows in [TIME]
--- .github/ghat/workflows/_shared.ts ---
export const build = workflow("Shared Build", {
  on: triggers({
    workflow_call: {
      inputs: {
        target: input("string", { required: true }),
      },
      outputs: {
        artifact: { description: "Build artifact" },
      },
    },
  }),
  jobs(ctx) {
    const b = ctx.job("Build", {
      runs_on: "ubuntu-latest",
      steps() {
        run(`cargo build --target ${ctx.inputs.target}`)
        return { artifact: "build.tar.gz" }
      }
    })
    return { artifact: b.outputs.artifact }
  }
})
--- .github/ghat/workflows/ci.ts ---
import { build } from "./_shared.ts"

workflow("CI", {
  on: triggers({ pull_request: ["main"] }),
  jobs(ctx) {
    const b = ctx.uses("Build", build, {
      with: { target: "x86_64-unknown-linux-gnu" },
    })
    ctx.job("Test", {
      runs_on: "ubuntu-latest",
      needs: [b],
      steps(ctx) {
        run(`echo testing ${ctx.needs.build.outputs.artifact}`)
      }
    })
  }
})
--- .github/ghat/workflows/release.ts ---
import { build } from "./_shared.ts"

workflow("Release", {
  on: triggers({ push: { tags: ["v*"] } }),
  jobs(ctx) {
    const b = ctx.uses("Build", build, {
      with: { target: "x86_64-unknown-linux-gnu" },
    })
    ctx.job("Publish", {
      runs_on: "ubuntu-latest",
      needs: [b],
      steps(ctx) {
        run(`echo publishing ${ctx.needs.build.outputs.artifact}`)
      }
    })
  }
})
--- .github/workflows/generated_ci.yaml ---
# Do not edit: this file is generated by `ghat generate`.
name: CI
on:
  pull_request:
    branches:
    - main
jobs:
  build:
    name: Build
    uses: ./.github/workflows/generated_shared_build.yaml
    with:
      target: x86_64-unknown-linux-gnu
  test:
    name: Test
    runs-on: ubuntu-latest
    needs:
    - build
    steps:
    - id: step_0
      run: echo testing ${{ needs.build.outputs.artifact }}
--- .github/workflows/generated_release.yaml ---
# Do not edit: this file is generated by `ghat generate`.
name: Release
on:
  push:
    tags:
    - v*
jobs:
  build:
    name: Build
    uses: ./.github/workflows/generated_shared_build.yaml
    with:
      target: x86_64-unknown-linux-gnu
  publish:
    name: Publish
    runs-on: ubuntu-latest
    needs:
    - build
    steps:
    - id: step_0
      run: echo publishing ${{ needs.build.outputs.artifact }}
--- .github/workflows/generated_shared_build.yaml ---
# Do not edit: this file is generated by `ghat generate`.
name: Shared Build
on:
  workflow_call:
    inputs:
      target:
        type: string
        required: true
    outputs:
      artifact:
        description: Build artifact
        value: ${{ jobs.build.outputs.artifact }}
jobs:
  build:
    name: Build
    runs-on: ubuntu-latest
    outputs:
      artifact: build.tar.gz
    steps:
    - id: step_0
      run: cargo build --target ${{ inputs.target }}
